--- a/index.html
+++ b/index.html
@@ -41,12 +41,15 @@
 <!-- Placeholder stuff-->
   <section class="section">
     <div class="container">
-      <h1 class="title">
+      <h1 class="title has-text-centered">
         TravelFog
       </h1>
+      <p class="has-text-centered is-size-5">
+         Get the weather and directions to the destination of your choice at the click of a button!
+      </p>
 
 <!-- Input Form -->
-      <form class="box">
+      <form class="box has-background-light">
         <div class="field">
           <label class="label">Your Location</label>
           <div class="control">
@@ -67,11 +70,11 @@
   <!-- Weather Box -->
   <div class="columns">
     <div class="column box has-background-light">
-      Weather
+      <h1 class="title has-text-centered">Weather</h1>
     </div>
 <!-- Map- Box -->
     <div class="column box has-background-light">
-      Directions
+     <h1 class="title has-text-centered">Directions</h1>
     </div>
   </div>
 
