copy over weather dashboard js // no changes to make it work with this yet

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
         <div class="field">
           <label class="label">Your Location</label>
           <div class="control">
-            <input class="input" type="address" placeholder="1234 Example ln, New York, NY 01234">
+            <input id="location" class="input" type="address" placeholder="1234 Example ln, New York, NY 01234">
           </div>
         </div>
         <div class="field">
           <label class="label">Destination Address</label>
           <div class="control">
-            <input class="input" type="address" placeholder="5678 Example ln, New York, NY 01234">
+            <input id="destination" class="input" type="address" placeholder="5678 Example ln, New York, NY 01234">
           </div>
         </div>
         <button class="button is-danger is-rounded">Get Weather And Directions</button>
@@ -86,5 +86,6 @@
     </div>
   </footer>
 
+  <script src="./Assets/js/script.js"></script>
   </body>
 </html>
