--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="field">
           <label class="label">Your Location</label>
           <div class="control">
-            <input id="location" class="input" type="address" placeholder="1234 Example ln, New York, NY 01234">
+            <input id="home" class="input" type="address" placeholder="1234 Example ln, New York, NY 01234">
           </div>
         </div>
         <div class="field">
@@ -71,6 +71,9 @@
   <div class="columns">
     <div class="column box has-background-light">
       <h1 class="title has-text-centered">Weather</h1>
+      <div id="weather-container">
+
+      </div>
     </div>
 <!-- Map- Box -->
     <div class="column box has-background-light">
