--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar is-light" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
           <a class="$navbar-item-img-max-height" href="#top">
-            <img src="assets/images/TravelFog.png" width="100">
+            <img src="Assets/images/TravelFog.png" width="100">
           </a>
       
           <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -109,6 +109,6 @@
 }
   </style>
 
-  <script src="./assets/js/script.js"></script>
+  <script src="./Assets/js/script.js"></script>
   </body>
 </html>
