improved error handling; QoL changes

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <!-- Weather Box -->
  <div class="columns">
-  <div class="column box has-background-light">
+  <div class="column box has-background-light mb-0">
     <h1 class="title has-text-centered">Weather</h1>
     <div id="weather-container"></div>
   </div>
