--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar is-light" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
           <a class="$navbar-item-img-max-height" href="#top">
-            <img src="Assets/images/TravelFog.png" width="100">
+            <img src="Assets/images/TravelFog.png" width="95">
           </a>
       
           <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -40,7 +40,7 @@
       </nav>
 <!-- Navbar End-->
 
-<!-- Placeholder stuff-->
+<!-- Website Description -->
   <section class="section">
     <div class="container">
       <h1 class="title has-text-centered">
